Added if statement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(INCLUDE_FILES
   include/Arguments.hpp
   include/ast/AssignmentNode.hpp
   include/ast/IdentifierNode.hpp
+  include/ast/IfNode.hpp
   include/ast/InitNode.hpp
   include/ast/IntegerNode.hpp
   include/ast/OpDivideNode.hpp
@@ -55,6 +56,7 @@ set(LIB_SOURCE_FILES
   src/Arguments.cpp
   src/ast/AssignmentNode.cpp
   src/ast/IdentifierNode.cpp
+  src/ast/IfNode.cpp
   src/ast/InitNode.cpp
   src/ast/IntegerNode.cpp
   src/ast/OpDivideNode.cpp
